# fantasy-br

./: .gitignore  .sqlfluffignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cartola.yaml  cartola.yml  data-refresh.yaml  development.yaml  development.yml  implementation.yaml  implementation.yml  reusable-dbt-build.yaml  reusable-dbt-run.yml  reusable-infra-deploy.yaml  reusable-infra-deploy.yml
infra/: .gitignore  README.md  bigquery.tf  firestore.tf  iam.tf  locals.tf  main.tf  outputs.tf  variables.tf
infra/envs/: demo.tfvars  dev.tfvars  prod.tfvars
infra/envs/demo/: backend.tf  outputs.tf  terraform.tfvars
infra/envs/dev/: backend.tf  terraform.tfvars
infra/envs/prod/: backend.tf  main.tf  terraform.tfvars  variables.tf
infra/modules/bigquery/: main.tf  outputs.tf  variables.tf
infra/modules/firestore/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/state/: dev.tfstate
legacy/draft-board/: draft-board__new.xlsx
scripts/: __init__.py
src/app/: __init__.py  main.py  requirements.txt  utils.py
src/app/.streamlit/: config.toml
src/app/pages/: __init__.py  market_valuation.py  matchup_preview.py  scouting.py  squad_and_team.py  start_or_sit.py  trade_simulator.py
src/dbt/: .user.yml  dbt_project.yml  profiles.yml
src/dbt/macros/: dvs.sql  scouting_enrichment.sql  shrink_blend.sql  stats_by_round.sql  z_score.sql  z_score_general.sql  z_score_position.sql
src/dbt/models/: sources.yml
src/dbt/models/kpis/last_1/: kpi_last_1.sql
src/dbt/models/kpis/last_10/: kpi_last_10.sql
src/dbt/models/kpis/last_5/: kpi_last_5.sql
src/dbt/models/kpis/last_5_away/: kpi_last_5_away.sql
src/dbt/models/kpis/last_5_home/: kpi_last_5_home.sql
src/dbt/models/kpis/last_season/: kpi_last_season.sql
src/dbt/models/kpis/this_season/: kpi_this_season.sql
src/dbt/models/last_1/: kpi_last_1.sql
src/dbt/models/last_2/: kpi_last_2.sql
src/dbt/models/last_3_away/: kpi_last_3_away.sql
src/dbt/models/last_3_home/: kpi_last_3_home.sql
src/dbt/models/last_5/: kpi_last_5.sql
src/dbt/models/last_5_played/: kpi_last_5_played.sql
src/dbt/models/last_played/: kpi_last_played.sql
src/dbt/models/last_season/: kpi_last_season.sql
src/dbt/models/map/: map.sql  map_baseline.sql
src/dbt/models/market_valuation/: mv_baseline.sql  mv_form_trend.sql  mv_main.sql  mv_par_breakdown.sql  mv_regression.sql  mv_round_by_round.sql  mv_schedule_strength.sql  mv_stabilized.sql  mv_value_profile.sql  par.sql
src/dbt/models/scouting/: scouting_last_1.sql  scouting_last_10.sql  scouting_last_season.sql  sct_last_1.sql  sct_last_10.sql  sct_last_5.sql  sct_last_5_away.sql  sct_last_5_home.sql  sct_last_season.sql  sct_this_season.sql
src/dbt/models/squad_and_team/: sat_players.sql
src/dbt/models/staging/: schema.yml  stg_clubs.sql  stg_matches.sql  stg_players.sql  stg_positions.sql  stg_schedule.sql
src/dbt/models/start_or_sit/: int_advanced_metrics.sql  int_consistency.sql  int_distribution_stats.sql  int_ewm_form.sql  int_map_baseline.sql  int_map_form.sql  int_map_mpap.sql  int_map_opponent.sql  int_map_venue.sql  int_poe.sql  map.sql  ss_distribution.sql  ss_edge_cases.sql  ss_home_away.sql  ss_main.sql  ss_map_breakdown.sql  ss_mpap_debug.sql  ss_round_by_round.sql
src/dbt/models/this_season/: kpi_this_season.sql
src/dbt/seeds/: hello_world.csv  players_2026.csv  raw_club_mapping.csv  scout_points.csv
src/legacy/: draft-board_v1.xlsx  draft-board_v2.xlsx  eda.ipynb  ~$draft-board.xlsx
