[project]
name = "fantasy-br"
version = "0.1.0"
description = "Fantasy BR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "dbt-bigquery>=1.9",
  "streamlit>=1.40",
  "google-cloud-bigquery>=3.0"
]

# fixit separate dbt and app
# fixit add dev dependencies (e.g., ruff, pytest, etc.)
# fixit consider adding [project.scripts] for CLI commands (e.g., run app, run dbt, etc.)

[project.optional-dependencies]
tests = []

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "D203",   # Use D211 (no blank line before class docstring)
    "D213",   # Use D212 (summary on first line)
    "COM812", # Conflicts with ruff formatter
]

[tool.pytest.ini_options]
log_cli_level = "INFO"
